external-dns-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-extdns-deployment
spec:
  selector:
    matchLabels:
      app: nginx-extdns
  template:
    metadata:
      labels:
        app: nginx-extdns
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-extdns-service
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx-extdns.k8s-demo.win
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  selector:
    app: nginx-extdns
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-extdns-ingress
spec:
  tls:
    - hosts:
      - '*.k8s-demo.win'
      - k8s-demo.win
      secretName: default-workshop-example-tls
  ingressClassName: nginx
  rules:
    - host: nginx-extdns.k8s-demo.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-extdns-service
                port:
                  number: 8080
